[#140875075] Fixed alignment isses for mobile device (added spaceing between text and buttons).  Also updated the 'Product Compare' page to make it more compact so it would fit on a single page for mobile.

--- a/CalOrdersJET/src/css/calorders.css
+++ b/CalOrdersJET/src/css/calorders.css
@@ -119,6 +119,7 @@
 
 .product-detail-name {
     font-weight: bold;
+    background: #cccccc
 }
 
 .product-detail-price {
